group 'SprocketRacing'
version '1.0-SNAPSHOT'

apply plugin: 'java'

sourceCompatibility = 9
repositories {
    mavenCentral()
}

dependencies {
    testCompile group: 'junit', name: 'junit', version: '4.12'
    compile 'javax.json:javax.json-api:1.0'
    compile group: 'com.googlecode.json-simple', name: 'json-simple', version: '1.1'
}

